[package]
name = "solana_actix_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-sdk = "1.18.9"
spl-token = "4.0.0"
base64 = "0.21"
bs58 = "0.5"
ed25519-dalek = { version = "1.0", features = ["std"] }
